commit root of "fix grey button text line height so wraps better"

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10486,7 +10486,7 @@ table.caption {
   color: #003a6e !important;
   height: 33%;
   z-index: 100;
-  line-height: 1.5em;
+  line-height: 1.4em;
   margin: 0em 0em 0.5em 0em;
   background: #e5e5e5;
   display: table;
